deny-gitjob.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-gitjob
  namespace: cattle-fleet-system
spec:
  podSelector:
    matchLabels:
      app: gitjob
